<resources>
    <string name="app_name">GProject2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">로그인을 해주세요</string>
    <string name="nav_header_subtitle">로그인을 해주세요</string>
    <string name="nav_header_desc">Profile picture</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">지도</string>
    <string name="menu_1">길찾기</string>
    <string name="menu_2">My 플레이스</string>
    <string name="menu_2_1">전체보기</string>
    <string name="menu_2_2">공원</string>
    <string name="menu_2_3">산</string>
    <string name="menu_2_4">강/탄천</string>
    <string name="menu_2_5">My 운동그룹</string>
    <string name="menu_3">운동그룹</string>
    <string name="menu_4">실시간 운동인증</string>

    <string name="home_second">Home Second</string>
</resources>