<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/nav_1"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_1"/>

    <item
        android:id="@+id/nav_3"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_3"/>

    <item
        android:id="@+id/nav_4"
        android:checkable="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="실시간 운동인증"/>

    <item android:title="@string/menu_2">
        <menu>
        <item
            android:id="@+id/nav_2_1"
            android:icon="@android:drawable/ic_menu_view"
            android:checkable="true"
            android:title="@string/menu_2_1"/>

        <item
            android:id="@+id/nav_2_2"
            android:icon="@android:drawable/ic_menu_view"
            android:checkable="true"
            android:title="@string/menu_2_2"/>

        <item
            android:id="@+id/nav_2_3"
            android:icon="@android:drawable/ic_menu_view"
            android:checkable="true"
            android:title="@string/menu_2_3"/>

        <item
            android:id="@+id/nav_2_4"
            android:icon="@android:drawable/ic_menu_view"
            android:checkable="true"
            android:title="@string/menu_2_4"/>
        <item
            android:id="@+id/nav_2_5"
            android:icon="@android:drawable/ic_menu_view"
            android:checkable="true"
            android:title="@string/menu_2_5"/>
        </menu>
    </item>
</menu>

<!--
            android:icon="@drawable/ic_menu_camera"
            android:icon="@android:drawable/ic_menu_search"
            android:icon="@android:drawable/ic_menu_myplaces"
-->