<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#FFFFFF"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/nav_header_main"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageButton
        android:id="@+id/signin_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:background="@drawable/ic_launcher_round" />

    <TextView
        android:id="@+id/signin_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/nav_header_title"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:onClick="headerTVonClick"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/signin_TextviewSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textColor="#909090"
        android:onClick="headerTVonClick"
        android:clickable="true"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>


<!--
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/nav_header_main"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageButton
            android:id="@+id/signin_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_marginRight="20dp"
            app:srcCompat="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

             onClick 이벤트 필요
            <TextView
                android:id="@+id/signin_Textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textColor="#000000"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signin_TextviewSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/nav_header_subtitle" />

        </LinearLayout>

    </LinearLayout>


        android:background="@drawable/side_nav_bar"
-->